--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -49,6 +49,9 @@ management:
   info:
     env:
       enabled: true
+  metrics:
+    tags:
+      application: ${spring.application.name}
 
 endpoints:
   shutdown:
@@ -75,6 +78,8 @@ logging:
       eazybytes:
         cards:
           DEBUG
+  pattern:
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
 
 
 
