--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -36,4 +36,6 @@ management:
     health:
       probes:
         enabled: true
-
+  metrics:
+    tags:
+      application: ${spring.application.name}
